{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 20,
  "lineage": "386e2877-3ed7-bc02-d170-b54f329b149a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasti_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06f42259633b677c8",
            "public_dns": "ec2-15-207-147-53.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.147.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHost",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebc1ac48dfd14136",
            "arn": "arn:aws:ec2:ap-south-1:136013817859:instance/i-01fb37bb33c9ff198",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fb37bb33c9ff198",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task4_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a954ad435dd0fad",
            "private_dns": "ip-192-168-0-152.ap-south-1.compute.internal",
            "private_ip": "192.168.0.152",
            "public_dns": "ec2-15-206-168-133.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.168.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-042d05295fe596bad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029c6f48ead044cf6",
            "tags": {
              "Name": "BastionHost_OS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-069f4549a3bca93dc"
            ]
          },
          "dependencies": [
            "aws_key_pair.key2",
            "aws_security_group.Security_Group_BastionHost",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc",
            "tls_private_key.task4_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MYSQL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebc1ac48dfd14136",
            "arn": "arn:aws:ec2:ap-south-1:136013817859:instance/i-0022fa2d331ca80c1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0022fa2d331ca80c1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task4_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d189e9c7ffd92622",
            "private_dns": "ip-192-168-2-56.ap-south-1.compute.internal",
            "private_ip": "192.168.2.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04afc6bd621b88483",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c717a3eff89e072a",
            "tags": {
              "Name": "MySql_Os"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00991786de645ec0c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key2",
            "aws_security_group.Security_Group_BastionHost",
            "aws_security_group.Security_Group_MySQL",
            "aws_subnet.private_subnet",
            "aws_vpc.bobbyvpc",
            "tls_private_key.task4_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fab75b03b2c2152d",
            "arn": "arn:aws:ec2:ap-south-1:136013817859:instance/i-02bae9d5946ffaa03",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02bae9d5946ffaa03",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task4_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e7e26cded433e07c",
            "private_dns": "ip-192-168-0-83.ap-south-1.compute.internal",
            "private_ip": "192.168.0.83",
            "public_dns": "ec2-13-127-31-73.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.31.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ef752bc143080c4d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029c6f48ead044cf6",
            "tags": {
              "Name": "WordPress_OS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b9854931aa3068d2"
            ]
          },
          "dependencies": [
            "aws_key_pair.key2",
            "aws_security_group.Security_Group_Word_Press",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc",
            "tls_private_key.task4_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My_IG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:internet-gateway/igw-008de21d973a31329",
            "id": "igw-008de21d973a31329",
            "owner_id": "136013817859",
            "tags": {
              "Name": "My_Internet_Gateway"
            },
            "vpc_id": "vpc-01420b49cfcf60ef3"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f42259633b677c8",
            "id": "nat-05a743210d3332e3c",
            "network_interface_id": "eni-0c7dbc04afa24074d",
            "private_ip": "192.168.0.220",
            "public_ip": "15.207.147.53",
            "subnet_id": "subnet-029c6f48ead044cf6",
            "tags": {
              "Name": "my_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.elasti_ip",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_routing_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee0387af8001598d",
            "owner_id": "136013817859",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008de21d973a31329",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_table"
            },
            "vpc_id": "vpc-01420b49cfcf60ef3"
          },
          "dependencies": [
            "aws_internet_gateway.My_IG",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c75a0cfa7bb6c52f",
            "owner_id": "136013817859",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05a743210d3332e3c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat_gateway_route"
            },
            "vpc_id": "vpc-01420b49cfcf60ef3"
          },
          "dependencies": [
            "aws_eip.elasti_ip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_asso",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0952e76311ea5b86c",
            "route_table_id": "rtb-0c75a0cfa7bb6c52f",
            "subnet_id": "subnet-0c717a3eff89e072a"
          },
          "dependencies": [
            "aws_eip.elasti_ip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.nat_gateway_route",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing_table_asson",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a79dfa298fb87ff0",
            "route_table_id": "rtb-0ee0387af8001598d",
            "subnet_id": "subnet-029c6f48ead044cf6"
          },
          "dependencies": [
            "aws_internet_gateway.My_IG",
            "aws_route_table.my_routing_table",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_BastionHost",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:security-group/sg-069f4549a3bca93dc",
            "description": "ssh_bh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069f4549a3bca93dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security_Group_BastionHost",
            "name_prefix": "",
            "owner_id": "136013817859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_BastionHost"
            },
            "timeouts": null,
            "vpc_id": "vpc-01420b49cfcf60ef3"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_MySQL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:security-group/sg-00991786de645ec0c",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00991786de645ec0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069f4549a3bca93dc"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security_Group_MySQL",
            "name_prefix": "",
            "owner_id": "136013817859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_MYSQL"
            },
            "timeouts": null,
            "vpc_id": "vpc-01420b49cfcf60ef3"
          },
          "dependencies": [
            "aws_security_group.Security_Group_BastionHost",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_Word_Press",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:security-group/sg-0b9854931aa3068d2",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9854931aa3068d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security_Group_Word_Press",
            "name_prefix": "",
            "owner_id": "136013817859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_Word_Press"
            },
            "timeouts": null,
            "vpc_id": "vpc-01420b49cfcf60ef3"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:subnet/subnet-0c717a3eff89e072a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0c717a3eff89e072a",
            "map_public_ip_on_launch": false,
            "owner_id": "136013817859",
            "tags": {
              "Name": "Private_Subnet"
            },
            "vpc_id": "vpc-01420b49cfcf60ef3"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:subnet/subnet-029c6f48ead044cf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-029c6f48ead044cf6",
            "map_public_ip_on_launch": true,
            "owner_id": "136013817859",
            "tags": {
              "Name": "Public_Subnet"
            },
            "vpc_id": "vpc-01420b49cfcf60ef3"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bobbyvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:vpc/vpc-01420b49cfcf60ef3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08651ec78a32bd2ee",
            "default_route_table_id": "rtb-0793d8e2046456b22",
            "default_security_group_id": "sg-0584ac5e2adf32b26",
            "dhcp_options_id": "dopt-479e5c2c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01420b49cfcf60ef3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0793d8e2046456b22",
            "owner_id": "136013817859",
            "tags": {
              "Name": "bobbyvpc"
            }
          }
        }
      ]
    }
  ]
}